aggiunta funzionalità di cache, creazione controller grafici e configurazione view cli compliant allo standard MVC