@@ -4,236 +4,323 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.sql.Statement;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
-
-import javax.swing.text.html.HTML.Tag;
+import java.util.stream.Collectors;
 
 import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.reflect.TypeToken;
 
-import tpgroup.model.Event;
 import tpgroup.model.EventsGraph;
-import tpgroup.model.EventsNode;
 import tpgroup.model.domain.Proposal;
-import tpgroup.model.domain.Rating;
 import tpgroup.model.domain.Room;
 import tpgroup.model.domain.Trip;
 import tpgroup.model.domain.User;
-import tpgroup.model.exception.RecordNotFoundException;
-import tpgroup.model.exception.SQLConnInterruptedException;
 import tpgroup.persistence.DAO;
-import tpgroup.persistence.EventsGraphJSONTypeAdapter;
-import tpgroup.persistence.LocalDateTimeJSONTypeAdaper;
 
 public class RoomDAODB implements DAO<Room> {
-	Connection conn;
-	private final Gson gson;
+	private Connection connection;
+	private Gson gson = new Gson();
+	private ProposalDAODB proposalDAO;
 
-	public RoomDAODB(Connection conn) {
-		this.conn = conn;
-		this.gson = new GsonBuilder()
-				.registerTypeAdapter(LocalDateTime.class, new LocalDateTimeJSONTypeAdaper())
-				.registerTypeAdapter(EventsGraph.class, new EventsGraphJSONTypeAdapter())
-				.create();
+	public RoomDAODB(Connection connection) {
+		this.connection = connection;
+		this.proposalDAO = new ProposalDAODB(connection);
 	}
 
-	private void populateGraphPOI(EventsGraph graph) throws SQLException {
-		final String poiQuery = "SELECT * FROM pointofinterest_tbl WHERE name = ? AND location = ?";
-		for (EventsNode node : graph.getAllNodes()) {
-			for (Event event : node.allEvents()) {
-				PreparedStatement poiStmt = conn.prepareStatement(poiQuery);
-				poiStmt.setString(1, event.getInfo().getName());
-				poiStmt.setString(2, event.getInfo().getLocation());
-				ResultSet poiRs = poiStmt.executeQuery();
-				event.getInfo().setDescription(poiRs.getString("description"));
-				event.getInfo().setRating(Rating.valueOf(poiRs.getString("rating")));
-				event.getInfo().setTags(gson.fromJson(poiRs.getString("tags"), new TypeToken<List<Tag>>() {
-				}.getType()));
+	@Override
+	public boolean add(Room room) {
+		try {
+			Boolean res = false;
+			connection.setAutoCommit(false);
+
+			String sql = """
+					INSERT INTO room_tbl (code, name, admin_fk, trip_country, trip_main_city, trip_graph)
+					VALUES (?, ?, ?, ?, ?, ?)
+					""";
+
+			try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+				stmt.setString(1, room.getCode());
+				stmt.setString(2, room.getName());
+				stmt.setString(3, room.getAdmin().getEmail());
+				stmt.setString(4, room.getTrip().getCountry());
+				stmt.setString(5, room.getTrip().getMainCity());
+				stmt.setString(6, serializeTripGraph(room.getTrip().getTripGraph()));
+
+				res = stmt.executeUpdate() > 0;
+			}catch(SQLException e){
+				return res;
+			}
+
+			saveRoomMembers(room);
+
+			res = res && proposalDAO.addRoomProposals(room); //handle return value
+
+			connection.commit();
+
+			return res;
+		} catch (SQLException e) {
+			try {
+				connection.rollback();
+			} catch (SQLException rollbackEx) {
+				// Log rollback error
+			}
+			throw new RuntimeException("Error saving room: " + e.getMessage(), e);
+		} finally {
+			try {
+				connection.setAutoCommit(true);
+			} catch (SQLException e) {
 			}
 		}
 	}
 
 	@Override
-	public Room get(Room room) throws RecordNotFoundException {
-		final String roomQuery = "SELECT * FROM room_tbl WHERE code = ?";
-		final String membersQuery = "SELECT user_email FROM member_of_tbl WHERE room_code = ?";
+    public Room get(Room room) {
+		String code = room.getCode();
+		if(code == null){
+			return null; 
+		}
+        String sql = """
+            SELECT r.code, r.name, r.admin_fk, r.trip_country, r.trip_main_city, r.trip_graph,
+                   u.email, u.password
+            FROM room_tbl r
+            LEFT JOIN user_tbl u ON r.admin_fk = u.email
+            WHERE r.code = ?
+            """;
+        
+        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+            stmt.setString(1, code);
+            
+            try (ResultSet rs = stmt.executeQuery()) {
+                if (rs.next()) {
+                    User admin = new User(
+                        rs.getString("email"),
+                        rs.getString("password")
+                    );
 
+					if(admin.getEmail() == null || admin.getPassword() == null){
+						throw new IllegalStateException(String.format("illegal state: room %s has no admin", code));
+					}
+                    
+                    String tripGraphJson = rs.getString("trip_graph");
+					EventsGraph tripGraph = deserializeTripGraph(tripGraphJson);
+
+					Set<Proposal> proposals = proposalDAO.getTripProposals(code);
+                    
+                    Trip trip = new Trip(
+                        rs.getString("trip_country"),
+                        rs.getString("trip_main_city"),
+						proposals,
+						tripGraph
+                    );
+
+					Set<User> members = findRoomMembers(code);
+                    
+                    Room fullRoom = new Room(code, admin, members, trip); 
+                    return fullRoom;
+                }
+                return null;
+            }
+            
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding room: " + e.getMessage(), e);
+        }
+    }
+
+	@Override
+	public List<Room> getAll() {
+        String sql = """
+            SELECT r.code, r.name, r.admin_fk, r.trip_country, r.trip_main_city, r.trip_graph,
+                   u.email, u.password
+            FROM room_tbl r
+            LEFT JOIN user_tbl u ON r.admin_fk = u.email
+            """;
+        
+        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+
+			List<Room> rooms = new ArrayList<>();
+
+            try (ResultSet rs = stmt.executeQuery()) {
+                while (rs.next()) {
+					String code = rs.getString("code");
+
+
+                    User admin = new User(
+                        rs.getString("email"),
+                        rs.getString("password")
+                    );
+
+					if(admin.getEmail() == null || admin.getPassword() == null){
+						throw new IllegalStateException(String.format("illegal state: room %s has no admin", code));
+					}
+                    
+                    String tripGraphJson = rs.getString("trip_graph");
+					EventsGraph tripGraph = deserializeTripGraph(tripGraphJson);
+
+					Set<Proposal> proposals = proposalDAO.getTripProposals(code);
+                    
+                    Trip trip = new Trip(
+                        rs.getString("trip_country"),
+                        rs.getString("trip_main_city"),
+						proposals,
+						tripGraph
+                    );
+
+					Set<User> members = findRoomMembers(code);
+                    
+                    rooms.add(new Room(rs.getString("code"), admin, members, trip));
+                }
+                return rooms;
+            }
+            
+        } catch (SQLException e) {
+            throw new RuntimeException("Error finding room: " + e.getMessage(), e);
+        }
+	}
+
+	@Override
+	public void delete(Room room) {
+		String code = room.getCode();
 		try {
-			PreparedStatement roomStmt = conn.prepareStatement(roomQuery);
-			PreparedStatement membersStmt = conn.prepareStatement(membersQuery);
+			connection.setAutoCommit(false);
 
-			roomStmt.setString(1, room.getCode());
-			ResultSet rs = roomStmt.executeQuery();
-
-			if (!rs.next()) {
-				throw new RecordNotFoundException();
+			String deleteMembersSql = "DELETE FROM room_members_tbl WHERE room_fk = ?";
+			try (PreparedStatement stmt = connection.prepareStatement(deleteMembersSql)) {
+				stmt.setString(1, code);
+				stmt.executeUpdate();
 			}
 
-			EventsGraph tripGraph = gson.fromJson(rs.getString("tripgraph"), EventsGraph.class);
-			populateGraphPOI(tripGraph);
-
-			List<Proposal> proposals = gson.fromJson(
-					rs.getString("proposals"),
-					new TypeToken<List<Proposal>>() {
-					}.getType());
-
-			Set<User> members = new HashSet<>();
-			membersStmt.setString(1, room.getCode());
-			ResultSet membersRs = membersStmt.executeQuery();
-			while (membersRs.next()) {
-				members.add(new User(membersRs.getString("user_email")));
+			String deleteProposalsSql = "DELETE FROM proposals_tbl WHERE trip_fk = ?";
+			try (PreparedStatement stmt = connection.prepareStatement(deleteProposalsSql)) {
+				stmt.setString(1, code);
+				stmt.executeUpdate();
 			}
 
-			return new Room(
-					rs.getString("name"),
-					new User(rs.getString("admin_email")),
-					members,
-					new Trip(rs.getString("destination"), proposals, tripGraph));
+			String deleteRoomSql = "DELETE FROM room_tbl WHERE code = ?";
+			try (PreparedStatement stmt = connection.prepareStatement(deleteRoomSql)) {
+				stmt.setString(1, code);
+				stmt.executeUpdate();
+			}
+
+			connection.commit();
 
 		} catch (SQLException e) {
-			throw new SQLConnInterruptedException(e);
+			try {
+				connection.rollback();
+			} catch (SQLException rollbackEx) {}
+			throw new RuntimeException("Error deleting room: " + e.getMessage(), e);
+		} finally {
+			try {
+				connection.setAutoCommit(true);
+			} catch (SQLException e) {}
 		}
 	}
 
 	@Override
 	public void save(Room room) {
-		final String updateRoom = "UPDATE room_tbl SET name = ?, admin_email = ?, destination = ?, "
-				+ "proposals = ?, tripgraph = ? WHERE code = ?";
-
 		try {
-			PreparedStatement stmt = conn.prepareStatement(updateRoom);
-			String proposalsJson = gson.toJson(room.getTrip().getProposals());
-			String tripGraphJson = gson.toJson(room.getTrip());
+			connection.setAutoCommit(false);
 
-			stmt.setString(1, room.getName());
-			stmt.setString(2, room.getAdmin().getEmail());
-			stmt.setString(3, room.getTrip().getDestination());
-			stmt.setString(4, proposalsJson);
-			stmt.setString(5, tripGraphJson);
-			stmt.setString(6, room.getCode());
+			String sql = """
+					INSERT INTO room_tbl (code, name, admin_fk, trip_country, trip_main_city, trip_graph)
+					VALUES (?, ?, ?, ?, ?, ?)
+					ON DUPLICATE KEY UPDATE
+					    name = VALUES(name),
+					    admin_fk = VALUES(admin_fk),
+					    trip_country = VALUES(trip_country),
+					    trip_main_city = VALUES(trip_main_city),
+					    trip_graph = VALUES(trip_graph)
+					""";
 
-			int affected = stmt.executeUpdate();
-			if (affected == 0) {
-				add(room);
-			}
-			updateMembers(room);
+			try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+				stmt.setString(1, room.getCode());
+				stmt.setString(2, room.getName());
+				stmt.setString(3, room.getAdmin().getEmail());
+				stmt.setString(4, room.getTrip().getCountry());
+				stmt.setString(5, room.getTrip().getMainCity());
+				stmt.setString(6, serializeTripGraph(room.getTrip().getTripGraph()));
 
-		} catch (SQLException e) {
-			throw new SQLConnInterruptedException(e);
-		}
-	}
-
-	private int updateMembers(Room room) throws SQLException {
-		final String selectMembers = "SELECT user_email FROM member_of_tbl WHERE room_code = ?";
-		final String insertMember = "INSERT INTO member_of_tbl (room_code, user_email) VALUES (?, ?)";
-
-		PreparedStatement deleteStmt = conn.prepareStatement(selectMembers);
-		PreparedStatement insertStmt = conn.prepareStatement(insertMember);
-
-		deleteStmt.setString(1, room.getCode());
-		ResultSet rs = deleteStmt.executeQuery();
-		List<User> newMembers = new ArrayList<>();
-		while (rs.next()) {
-			User member = new User(rs.getString("user_email"));
-			if (!room.getMembers().contains(member)) {
-				newMembers.add(member);
-			}
-		}
-
-		for (User member : newMembers) {
-			insertStmt.setString(1, room.getCode());
-			insertStmt.setString(2, member.getEmail());
-			insertStmt.addBatch();
-		}
-
-		return Arrays.stream(insertStmt.executeBatch()).sum();
-	}
-
-	@Override
-	public boolean add(Room room) {
-		final String insertRoom = "INSERT INTO room_tbl (code, name, admin_email, destination, proposals, tripgraph) "
-				+ "VALUES (?, ?, ?, ?, ?, ?)";
-
-		try (PreparedStatement stmt = conn.prepareStatement(insertRoom)) {
-			String proposalsJson = gson.toJson(room.getTrip().getProposals());
-			String tripGraphJson = gson.toJson(room.getTrip().getTripGraph());
-
-			stmt.setString(1, room.getCode());
-			stmt.setString(2, room.getName());
-			stmt.setString(3, room.getAdmin().getEmail());
-			stmt.setString(4, room.getTrip().getDestination());
-			stmt.setString(5, proposalsJson);
-			stmt.setString(6, tripGraphJson);
-
-			if (stmt.executeUpdate() == 0) {
-				return false;
+				stmt.executeUpdate();
 			}
 
-			updateMembers(room);
-			return true;
+			saveRoomMembers(room);
+
+			proposalDAO.saveRoomProposals(room);
+
+			connection.commit();
 
 		} catch (SQLException e) {
 			try {
-				conn.rollback();
-			} catch (SQLException e1) {
-				throw new SQLConnInterruptedException(e);
-			}
+				connection.rollback();
+			} catch (SQLException rollbackEx) {}
+			throw new RuntimeException("Error updating room: " + e.getMessage(), e);
+		} finally {
+			try {
+				connection.setAutoCommit(true);
+			} catch (SQLException e) {}
 		}
-		return false;
-	}
-
-	@Override
-	public void delete(Room room) throws RecordNotFoundException {
-		final String deleteRoom = "DELETE FROM room_tbl WHERE code = ?";
-
-		try {
-			PreparedStatement stmt = conn.prepareStatement(deleteRoom);
-			stmt.setString(1, room.getCode());
-
-			if (stmt.executeUpdate() == 0) {
-				throw new RecordNotFoundException();
-			}
-
-			PreparedStatement deleteMembers = conn.prepareStatement(
-					"DELETE FROM member_of_tbl WHERE room_code = ?");
-			deleteMembers.setString(1, room.getCode());
-			deleteMembers.executeUpdate();
-		} catch (SQLException e) {
-			throw new SQLConnInterruptedException(e);
-		}
-	}
-
-	@Override
-	public List<Room> getAll() {
-		final String query = "SELECT code FROM room_tbl";
-		List<Room> rooms = new ArrayList<>();
-
-		try {
-			Statement stmt = conn.createStatement();
-			ResultSet rs = stmt.executeQuery(query);
-
-			while (rs.next()) {
-				rooms.add(get(new Room(rs.getString("code"))));
-			}
-		} catch (SQLException | RecordNotFoundException e) {
-			throw new SQLConnInterruptedException(e);
-		}
-		return rooms;
 	}
 
 	@Override
 	public List<Room> getFiltered(Predicate<Room> filter) {
-		return getAll().stream()
-				.filter(filter)
-				.toList();
+		return getAll().stream().filter(filter).collect(Collectors.toList());
 	}
 
+	private void saveRoomMembers(Room room) throws SQLException {
+
+		String deleteSql = "DELETE FROM room_members_tbl WHERE room_fk = ?";
+		try (PreparedStatement stmt = connection.prepareStatement(deleteSql)) {
+			stmt.setString(1, room.getCode());
+			stmt.executeUpdate();
+		}
+
+		String insertSql = "INSERT INTO room_members_tbl (room_fk, user_fk) VALUES (?, ?)";
+		try (PreparedStatement stmt = connection.prepareStatement(insertSql)) {
+			for (User member : room.getMembers()) {
+				stmt.setString(1, room.getCode());
+				stmt.setString(2, member.getEmail());
+				stmt.addBatch();
+			}
+			stmt.executeBatch();
+		}
+
+	}
+
+	private Set<User> findRoomMembers(String roomCode) {
+		String sql = """
+				SELECT u.email, u.password
+				FROM room_members_tbl rm
+				JOIN user_tbl u ON rm.user_fk = u.email
+				WHERE rm.room_fk = ?
+				""";
+
+		Set<User> members = new HashSet<>();
+
+		try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+			stmt.setString(1, roomCode);
+
+			try (ResultSet rs = stmt.executeQuery()) {
+				while (rs.next()) {
+					members.add(new User(
+							rs.getString("email"),
+							rs.getString("password")));
+				}
+			}
+
+		} catch (SQLException e) {
+			throw new RuntimeException("Error finding room members: " + e.getMessage(), e);
+		}
+
+		return members;
+	}
+
+	private String serializeTripGraph(EventsGraph tripGraph){
+		return gson.toJson(tripGraph);
+	}
+
+	private EventsGraph deserializeTripGraph(String tripGraphJSON){
+		return gson.fromJson(tripGraphJSON, EventsGraph.class);
+	}
 }
